--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -3,6 +3,7 @@
     --accent-color: #2871FF;
     --grey-lv1: #e9e9e9;
     --grey-lv2: #CDCDCD;
+    --grey-lv3: #6D6D6D;
 }
 * {
     margin: 0;
@@ -25,12 +26,12 @@ button {
 input:focus {
     outline: none;
 }
-.container {
+/* .container {
     max-width: 1200px;
     width: 100%;
     margin: 0 auto;
     padding: 10px;
-}
+} */
 .parent-div {
     padding: 20px;
     background-color: white;
@@ -61,12 +62,60 @@ input:focus {
     border-radius: 5px;
     margin-top: 5px;
 }
-.server-message {
+.btn-save:hover {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0 0);
+}
+.service-message {
     margin-top: 10px;
 }
-.server-message.green {
+.service-message.green {
     color: #05c04d;
 }
-.server-message.red {
+.service-message.red {
     color: #dd2c2c;
+}
+.table {
+    border-spacing: 0;
+    width: 100%;
+}
+.cell {
+    padding: 12px;
+}
+.table .row:hover {
+    outline: 1px solid var(--grey-lv2);
+}
+.table .row:nth-child(odd) {
+    background-color: #E2E2E2;
+}
+.form-fields {
+    width: 100%;
+}
+.form-fields .row {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 5%;
+    padding: 25px 0;
+    border-bottom: 1px solid var(--grey-lv2);
+}
+.form-fields .row:last-child {
+    border-bottom: none;
+}
+.field__name, .field__input {
+    display: block;
+}
+.field__name {
+    margin-bottom: 10px;
+}
+.field__error {
+    color: #dd2c2c;
+}
+.field__input {
+    height: 40px;
+    width: 100%;
+    border-radius: 5px;
+    border: 1px solid var(--grey-lv2);
+    padding: 10px;
+}
+.field__input.error {
+    border: 1px solid #dd2c2c;
 }
