--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -46,6 +46,10 @@ input:focus {
 .viewer__title {
     font-size: 20px;
 }
+.viewer-header__links {
+    display: flex;
+    gap: 20px;
+}
 .viewer-header__link {
     color: blue;
 }
