--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 :root {
     --accent-color: #2871FF;
+    --danger: #FF5151;
     --grey-lv1: #e9e9e9;
     --grey-lv2: #CDCDCD;
     --grey-lv3: #6D6D6D;
@@ -59,14 +60,14 @@ input:focus {
 .control-bar {
     margin-top: 15px;
 }
-.btn-save {
+.btn {
     padding: 12px 40px;
     color: white;
     background-color: var(--accent-color);
     border-radius: 5px;
     margin-top: 5px;
 }
-.btn-save:hover {
+.btn:hover {
     background-image: linear-gradient(rgba(0, 0, 0, 0.1) 0 0);
 }
 .service-message {
